--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -21,7 +21,7 @@ repos:
 -   repo: https://github.com/igorshubovych/markdownlint-cli
     rev: v0.33.0
     hooks:
-    -   id: markdownlint-fix
+    -   id: markdownlint-docker
 -   repo: https://github.com/asottile/pyupgrade
     rev: v3.3.1
     hooks:
