--- a/setup.cfg
+++ b/setup.cfg
@@ -1,16 +1,11 @@
 [metadata]
-name =
+name = python_setup_template
 version = 1.0.0
-description =
 long_description = file: README.md
 long_description_content_type = text/markdown
 url = https://github.com/vunhatchuong123/
 author = Ronny
-author_email =
-classifiers =
-    Programming Language :: Python :: 3
-    Programming Language :: Python :: 3 :: Only
-    Programming Language :: Python :: Implementation :: CPython
+author_email = 
 
 [options]
 packages = find:
@@ -30,3 +25,18 @@ profile = black
 
 [coverage:run]
 plugins = covdefaults
+
+[mypy]
+disallow_untyped_defs = true
+check_untyped_defs = true
+disallow_any_generics = true
+disallow_incomplete_defs = true
+warn_redundant_casts = true
+warn_unused_ignores = true
+show_error_codes = True
+
+[mypy-testing.*]
+disallow_untyped_defs = False
+
+[mypy-tests.*]
+disallow_untyped_defs = False
