feat: Add changes to fix pre-commit.ci

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,11 +1,14 @@
 [metadata]
-name = python_setup_template
+name = setup_template
 version = 1.0.0
 long_description = file: README.md
 long_description_content_type = text/markdown
-url = https://github.com/vunhatchuong123/
+url = https://github.com/vunhatchuong123/python_setup_template
 author = Ronny
-author_email = 
+classifiers =
+    Programming Language :: Python :: 3
+    Programming Language :: Python :: 3 :: Only
+    Programming Language :: Python :: Implementation :: CPython
 
 [options]
 packages = find:
@@ -40,3 +43,6 @@ disallow_untyped_defs = False
 
 [mypy-tests.*]
 disallow_untyped_defs = False
+
+[markdownlint-docker]
+MD041 = False
