--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,5 +1,9 @@
 # See https://pre-commit.com for more information
 # See https://pre-commit.com/hooks.html for more hooks
+
+# For the template repo only
+ci:
+    skip: [hadolint-docker, docker-ggshield]
 repos:
 -   repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.4.0
@@ -22,6 +26,7 @@ repos:
     rev: v0.33.0
     hooks:
     -   id: markdownlint-docker
+        args: [--disable, MD041, --]
 -   repo: https://github.com/asottile/pyupgrade
     rev: v3.3.1
     hooks:
