--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -26,6 +26,7 @@ repos:
     rev: v0.9.9
     hooks:
       - id: pymarkdown
+        pass_filenames: false
         args: [-d, MD041, scan, -r, .]
 -   repo: https://github.com/asottile/pyupgrade
     rev: v3.3.1
