--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -27,7 +27,7 @@ repos:
     hooks:
       - id: pymarkdown
         pass_filenames: false
-        args: [-d, "MD041,MD013", scan, ., ./docs]
+        args: [-d, "MD041,MD013", scan, -r, .]
 -   repo: https://github.com/asottile/pyupgrade
     rev: v3.3.1
     hooks:
