[pre-commit.ci]: fix skip conf

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,8 +3,7 @@
 
 # For the template repo only
 ci:
-    skip: [ggshield]
-    skip: [pymarkdown]
+    skip: [ggshield, pymarkdown]
 repos:
 -   repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.4.0
