--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,60 +5,52 @@
 ci:
     skip: [ggshield, pymarkdown]
 repos:
--   repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.5.0
-    hooks:
-    -   id: trailing-whitespace
-    -   id: end-of-file-fixer
-    -   id: check-yaml
-    -   id: debug-statements
-    -   id: requirements-txt-fixer
-    -   id: name-tests-test
--   repo: https://github.com/asottile/setup-cfg-fmt
-    rev: v2.5.0
-    hooks:
-    -   id: setup-cfg-fmt
--   repo: https://github.com/thlorenz/doctoc
-    rev: v2.2.0
-    hooks:
-    -   id: doctoc
--   repo: https://github.com/jackdewinter/pymarkdown
-    rev: 0.9.16
-    hooks:
-      - id: pymarkdown
-        pass_filenames: false
-        args: [-d, "MD041, MD013", scan, -r, .]
--   repo: https://github.com/asottile/pyupgrade
-    rev: v3.15.0
-    hooks:
-    -   id: pyupgrade
-        args: [--py310-plus]
--   repo: https://github.com/psf/black
-    rev: 24.1.1
-    hooks:
-    -   id: black
--   repo: https://github.com/PyCQA/isort
-    rev: 5.13.2
-    hooks:
-    -   id: isort
--   repo: https://github.com/PyCQA/flake8
-    rev: 7.0.0
-    hooks:
-    -   id: flake8
--   repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v1.8.0
-    hooks:
-    -   id: mypy
-        additional_dependencies: [types-all]
--   repo: https://github.com/AleksaC/hadolint-py
-    rev: v2.12.0.3
-    hooks:
-      - id: hadolint
--   repo: https://github.com/gitguardian/ggshield
-    rev: v1.23.0
-    hooks:
-    -   id: ggshield
--   repo: https://github.com/codespell-project/codespell
-    rev: v2.2.6
-    hooks:
-    -   id: codespell
+    - repo: https://github.com/pre-commit/pre-commit-hooks
+      rev: v4.5.0
+      hooks:
+          - id: trailing-whitespace
+          - id: end-of-file-fixer
+          - id: check-yaml
+          - id: debug-statements
+          - id: requirements-txt-fixer
+          - id: name-tests-test
+    - repo: https://github.com/asottile/setup-cfg-fmt
+      rev: v2.5.0
+      hooks:
+          - id: setup-cfg-fmt
+    - repo: https://github.com/thlorenz/doctoc
+      rev: v2.2.0
+      hooks:
+          - id: doctoc
+    - repo: https://github.com/jackdewinter/pymarkdown
+      rev: 0.9.16
+      hooks:
+          - id: pymarkdown
+            pass_filenames: false
+            args: [-d, "MD041, MD013", scan, -r, .]
+    - repo: https://github.com/astral-sh/ruff-pre-commit
+      rev: v0.2.1
+      hooks:
+          # Run the linter.
+          - id: ruff
+            args: [--target-version, py310]
+          # Run the formatter.
+          - id: ruff-format
+            args: [--target-version, py310]
+    - repo: https://github.com/pre-commit/mirrors-mypy
+      rev: v1.8.0
+      hooks:
+          - id: mypy
+            additional_dependencies: [types-all]
+    - repo: https://github.com/AleksaC/hadolint-py
+      rev: v2.12.0.3
+      hooks:
+          - id: hadolint
+    - repo: https://github.com/gitguardian/ggshield
+      rev: v1.23.0
+      hooks:
+          - id: ggshield
+    - repo: https://github.com/codespell-project/codespell
+      rev: v2.2.6
+      hooks:
+          - id: codespell
