--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,7 +1,8 @@
 -r requirements.txt
-covdefaults
-pre-commit
-pytest
-pytest-cov
-ruff
-tox
+covdefaults==2.3.0
+pre-commit==3.8.0
+pur==7.3.2
+pytest==8.3.3
+pytest-cov==5.0.0
+ruff==0.6.8
+tox==4.21.1
